// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`app.tsx Tests app rendering with newTab=false 1`] = `
<body>
  <div>
    <a
      class="sc-dkzDqf gHJogt"
      href="#"
    >
      <div
        class="sc-hKMtZM kjGwCV"
      >
        <i
          class="sc-gsnTZi ctUcHQ"
        >
          bug_report
        </i>
      </div>
      <div
        class="sc-eCYdqJ bcsQqv"
      >
        <div
          class="sc-jSMfEi bkhPVp"
        >
          App Test
        </div>
        <p
          class="sc-gKXOVf EDUWD"
        >
          test
        </p>
      </div>
    </a>
  </div>
</body>
`;

exports[`app.tsx Tests app rendering with newTab=true 1`] = `
<body>
  <div>
    <a
      class="sc-dkzDqf gHJogt"
      href="#"
      rel="noopener noreferrer"
      target="_blank"
    >
      <div
        class="sc-hKMtZM kjGwCV"
      >
        <i
          class="sc-gsnTZi ctUcHQ"
        >
          bug_report
        </i>
      </div>
      <div
        class="sc-eCYdqJ bcsQqv"
      >
        <div
          class="sc-jSMfEi bkhPVp"
        >
          App Test
        </div>
        <p
          class="sc-gKXOVf EDUWD"
        >
          test
        </p>
      </div>
    </a>
  </div>
</body>
`;

exports[`app.tsx Tests app rendering without newTab 1`] = `
<body>
  <div>
    <a
      class="sc-dkzDqf gHJogt"
      href="#"
    >
      <div
        class="sc-hKMtZM kjGwCV"
      >
        <i
          class="sc-gsnTZi ctUcHQ"
        >
          bug_report
        </i>
      </div>
      <div
        class="sc-eCYdqJ bcsQqv"
      >
        <div
          class="sc-jSMfEi bkhPVp"
        >
          App Test
        </div>
        <p
          class="sc-gKXOVf EDUWD"
        >
          test
        </p>
      </div>
    </a>
  </div>
</body>
`;
